Fix alignment

--- a/sass/layout/components/_footnotes.scss
+++ b/sass/layout/components/_footnotes.scss
@@ -9,7 +9,6 @@
 .footnotes-list { 
   padding-left: 1.5rem;
   margin-bottom: 0;
-  margin-left: auto;
   margin-right: auto;
   max-width: 60ch;
 
